# invenio-saml

./: .editorconfig  .git-blame-ignore-revs  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-i18n-tests.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  examplesapp.rst  index.rst  installation.rst  make.bat  usage.rst
examples/: app-setup.sh  app-teardown.sh  app.py
invenio_saml/: __init__.py  config.py  errors.py  ext.py  handlers.py  invenio_app.py  proxies.py  utils.py  version.py  views.py
invenio_saml/invenio_accounts/: __init__.py  errors.py  models.py  utils.py
invenio_saml/templates/invenio-saml/: login_user.html
invenio_saml/templates/invenio_saml/: base.html  index.html
invenio_saml/templates/semantic-ui/invenio_saml/: login_user.html
invenio_saml/translations/: messages.pot
invenio_saml/translations/af/LC_MESSAGES/: messages.po
invenio_saml/translations/ar/LC_MESSAGES/: messages.po
invenio_saml/translations/bg/LC_MESSAGES/: messages.po
invenio_saml/translations/ca/LC_MESSAGES/: messages.po
invenio_saml/translations/cs/LC_MESSAGES/: messages.po
invenio_saml/translations/da/LC_MESSAGES/: messages.po
invenio_saml/translations/de/LC_MESSAGES/: messages.po
invenio_saml/translations/de_AT/LC_MESSAGES/: messages.po
invenio_saml/translations/de_DE/LC_MESSAGES/: messages.po
invenio_saml/translations/el/LC_MESSAGES/: messages.po
invenio_saml/translations/en_AT/LC_MESSAGES/: messages.po
invenio_saml/translations/en_HU/LC_MESSAGES/: messages.po
invenio_saml/translations/es/LC_MESSAGES/: messages.po
invenio_saml/translations/es_CU/LC_MESSAGES/: messages.po
invenio_saml/translations/es_MX/LC_MESSAGES/: messages.po
invenio_saml/translations/et/LC_MESSAGES/: messages.po
invenio_saml/translations/et_EE/LC_MESSAGES/: messages.po
invenio_saml/translations/fa/LC_MESSAGES/: messages.po
invenio_saml/translations/fa_IR/LC_MESSAGES/: messages.po
invenio_saml/translations/fi/LC_MESSAGES/: messages.po
invenio_saml/translations/fr/LC_MESSAGES/: messages.po
invenio_saml/translations/fr_CI/LC_MESSAGES/: messages.po
invenio_saml/translations/fr_FR/LC_MESSAGES/: messages.po
invenio_saml/translations/gl/LC_MESSAGES/: messages.po
invenio_saml/translations/hi_IN/LC_MESSAGES/: messages.po
invenio_saml/translations/hr/LC_MESSAGES/: messages.po
invenio_saml/translations/hu/LC_MESSAGES/: messages.po
invenio_saml/translations/hu_HU/LC_MESSAGES/: messages.po
invenio_saml/translations/it/LC_MESSAGES/: messages.po
invenio_saml/translations/ja/LC_MESSAGES/: messages.po
invenio_saml/translations/ka/LC_MESSAGES/: messages.po
invenio_saml/translations/ko/LC_MESSAGES/: messages.po
invenio_saml/translations/lt/LC_MESSAGES/: messages.po
invenio_saml/translations/ne/LC_MESSAGES/: messages.po
invenio_saml/translations/no/LC_MESSAGES/: messages.po
invenio_saml/translations/pl/LC_MESSAGES/: messages.po
invenio_saml/translations/pt/LC_MESSAGES/: messages.po
invenio_saml/translations/ro/LC_MESSAGES/: messages.po
invenio_saml/translations/ru/LC_MESSAGES/: messages.po
invenio_saml/translations/rw/LC_MESSAGES/: messages.po
invenio_saml/translations/sk/LC_MESSAGES/: messages.po
invenio_saml/translations/sv/LC_MESSAGES/: messages.po
invenio_saml/translations/sv_SE/LC_MESSAGES/: messages.po
invenio_saml/translations/tr/LC_MESSAGES/: messages.po
invenio_saml/translations/uk/LC_MESSAGES/: messages.po
invenio_saml/translations/uk_UA/LC_MESSAGES/: messages.po
invenio_saml/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_saml/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_saml/translations/zh_TW/LC_MESSAGES/: messages.po
tests/: conftest.py  test_examples_app.py  test_external.py  test_handlers.py  test_invenio_saml.py  test_ultraviolet_saml.py  test_utils.py  test_views.py  tests_external.py
tests/data/: idp.xml  metadata.xml  slo_response.xml  sso_response.xml
ultraviolet_saml/: __init__.py  config.py  ext.py  handlers.py  proxies.py  ultraviolet_app.py  utils.py  views.py
ultraviolet_saml/templates/ultraviolet-saml/: login_user.html
ultraviolet_saml/translations/: messages.pot
ultraviolet_saml/translations/af/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/ar/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/bg/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/ca/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/cs/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/da/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/de/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/el/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/es/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/et/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/et_EE/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/fa/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/fr/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/gl/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/hr/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/hu/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/it/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/ja/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/ka/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/lt/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/no/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/pl/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/pt/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/ro/LC_MESSAGES/: messages.po
ultraviolet_saml/translations/ru/LC_MESSAGES/: messages.po
ultraviolet_saml/ultraviolet_accounts/: __init__.py  utils.py
(+7 files in other folders)
