# -*- coding: utf-8 -*-
#
# Copyright (C) 2019 Esteban J. Garcia Gabancho.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio-SAML is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-saml
version = attr: invenio_saml/.__version__
description = "Invenio module that provides SAML integration."
long_description = file: README.rst, CHANGES.rst
keywords = invenio SSO SAML
license = MIT
author = Esteban J. Garcia Gabancho
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-saml
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    flask-sso-saml>=0.1.0
    invenio-accounts>=1.4.5
    uritools>=2.2.0

[options.extras_require]
tests =
    invenio-app>=1.3.0
    invenio-mail>=1.0.0
    invenio-userprofiles>=1.0.0
    mock>=2.0.0
    redis>=2.10.5
    pytest-invenio>=1.4.0
    invenio-oauthclient>=1.5.1
    Sphinx>=3.3.1,<3.4
    invenio-db[mysql,postgresql,versioning]>=1.0.9,<2.0.0

[options.entry_points]
invenio_base.apps =
    invenio_saml = invenio_saml:InvenioSAML
invenio_base.api_apps =
    invenio_saml = invenio_saml:InvenioSAML
invenio_base.blueprints =
    invenio_saml = invenio_saml.views:blueprint
invenio_i18n.translations =
    invenio_saml = invenio_saml

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_saml/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_saml/translations/messages.pot

[init_catalog]
input-file = invenio_saml/translations/messages.pot
output-dir = invenio_saml/translations/

[update_catalog]
input-file = invenio_saml/translations/messages.pot
output-dir = invenio_saml/translations/

[pycodestyle]
exclude = docs/conf.py

[pydocstyle]
add_ignore = D401
