# -*- coding: utf-8 -*-
#
# Copyright (C) 2019 Esteban J. Garcia Gabancho.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio-SAML is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = ultraviolet-saml
version = attr: ultraviolet_saml.__version__
description = "Ultraviolet module that provides SAML integration."
long_description = file: README.rst, CHANGES.rst
keywords = Ultraviolet SSO SAML
license = MIT
author = Esteban J. Garcia Gabancho & Akshay Udaya Hegde
author_email = ah6138@nyu.edu
url = https://github.com/inveniosoftware/invenio-saml
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    flask-sso-saml>=0.1.0
    invenio-accounts>=1.4.5
    invenio-access>=1.4.2
    invenio-communities>=3.2.0
    uritools>=2.2.0
    werkzeug>=2.0.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-app>=1.3.0
    invenio-mail>=1.0.0
    invenio-userprofiles>=1.0.0
    invenio-search>=2.0.0
    mock>=2.0.0
    redis>=2.10.5
    pytest-invenio>=1.4.0
    invenio-oauthclient>=1.5.1
    Sphinx>=4.5.0
    invenio-db[mysql,postgresql,versioning]>=1.0.9,<2.0.0
    elasticsearch7

[options.entry_points]
invenio_base.apps =
    ultraviolet_saml = ultraviolet_saml:UltravioletSAML
invenio_base.api_apps =
    ultraviolet_saml = ultraviolet_saml:UltravioletSAML
invenio_base.blueprints =
    ultraviolet_saml = ultraviolet_saml.views:blueprint
invenio_i18n.translations =
    ultraviolet_saml = ultraviolet_saml

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = ultraviolet_saml/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = ultraviolet_saml/translations/messages.pot

[init_catalog]
input-file = ultraviolet_saml/translations/messages.pot
output-dir = ultraviolet_saml/translations/

[update_catalog]
input-file = ultraviolet_saml/translations/messages.pot
output-dir = ultraviolet_saml/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=ultraviolet_saml --cov-report=term-missing
testpaths = docs tests ultraviolet_saml
