# -*- coding: utf-8 -*-
#
# Copyright (C) 2019-2024 Esteban J. Garcia Gabancho.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio-SAML is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-saml
version = attr: invenio_saml.__version__
description = "Invenio module that provides SAML integration."
long_description = file: README.rst, CHANGES.rst
keywords = invenio SSO SAML
license = MIT
author = Esteban J. Garcia Gabancho
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-saml
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-accounts>=1.4.5
    uritools>=2.2.0
    python3-saml>=1.5.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-app>=1.3.0
    invenio-mail>=1.0.0
    invenio-userprofiles>=1.0.0
    mock>=2.0.0
    redis>=2.10.5
    pytest-invenio>=2.1.0,<3.0.0
    pytest-freezegun>=0.2.0
    invenio-oauthclient>=1.5.1
    Sphinx>=4.5.0
    invenio-db[mysql,postgresql,versioning]>=1.0.9,<2.0.0

[options.entry_points]
invenio_base.apps =
    invenio_saml = invenio_saml:InvenioSSOSAML
invenio_base.api_apps =
    invenio_saml = invenio_saml:InvenioSSOSAML
invenio_i18n.translations =
    invenio_saml = invenio_saml

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_saml/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_saml/translations/messages.pot

[init_catalog]
input-file = invenio_saml/translations/messages.pot
output-dir = invenio_saml/translations/

[update_catalog]
input-file = invenio_saml/translations/messages.pot
output-dir = invenio_saml/translations/

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_saml --cov-report=term-missing
testpaths = docs tests invenio_saml
